--- a/src/app/modules/characters/components/character-list/character-list.component.html
+++ b/src/app/modules/characters/components/character-list/character-list.component.html
@@ -1,6 +1,5 @@
-<div>
-
-</div>
-<div *ngFor="let character of $characters | async">
-  <app-character-card [character]=character></app-character-card>
+<div class="tile is-ancestor">
+    <div class="tile is-parent is-3" *ngFor="let character of $characters | async">
+        <app-character-card [character]=character></app-character-card>
+    </div>
 </div>
